--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -59,4 +59,6 @@ Version: 2.0.0
 @import "sections/_blog";
 @import "sections/_sectionbg";
 @import "sections/_footer";
+@import "sections/_auth";
 @import "sections/_responsive";
+@import "sections/getQuote";
