--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #01008c;
+  --main-color: #d31328;
   --main-color-2: #181a2a;
   --active-color: #f14b4b;
   --bg-color: #f5f5f5;
