--- a/src/components/Dropdown/Dropdown.module.sass
+++ b/src/components/Dropdown/Dropdown.module.sass
@@ -1,6 +1,7 @@
 @import ../../../public/assets/scss/helpers
 
 .dropdown
+    text-align: left
     position: relative
     z-index: 3
     &.active
