--- a/src/components/ListYourProperty/ListYourProperty.module.sass
+++ b/src/components/ListYourProperty/ListYourProperty.module.sass
@@ -91,6 +91,7 @@
             margin-bottom: 32px
 
 .note
+    text-align: left
     margin-top: 4px
     +caption-2
     color: $n4
@@ -127,6 +128,7 @@
 
 .category
     +body-bold-2
+    text-align: left
 
 .item
     .button
@@ -161,6 +163,7 @@
                 margin-bottom: 20px
 
 .label
+    text-align: left
     margin-bottom: 12px
     +hairline-2
     color: $n5
