--- a/src/components/TextArea/TextArea.module.sass
+++ b/src/components/TextArea/TextArea.module.sass
@@ -1,6 +1,7 @@
 @import ../../../public/assets/scss/helpers
 
 .label
+    text-align: left
     margin-bottom: 12px
     +hairline-2
     color: $n5
@@ -9,6 +10,7 @@
     font-size: 0
 
 .textarea
+
     width: 100%
     height: 140px
     padding: 10px 14px
