add : components and addition changes

--- a/public/assets/scss/helpers.sass
+++ b/public/assets/scss/helpers.sass
@@ -27,7 +27,7 @@
 
 =poppins
     font-family: 'Poppins', sans-serif
-    
+
 // colors
 $p1: #3B71FE
 $p2: #8BC5E5
@@ -110,7 +110,13 @@ $n8: #FCFCFD
     font-size: 14px
     line-height: (16/14)
     font-weight: 700
-    
+
+.button-small
+    height: 40px
+    border-radius: 20px
+    padding: 0 16px
+    font-size: 14px
+
 //triangle
 =arr($width, $height, $bg, $direction)
     width: 0px
